Client/Component, inlineChart, sticky fix and align columnWidth

--- a/Theme/src/generic/sass/_standardPage.scss
+++ b/Theme/src/generic/sass/_standardPage.scss
@@ -1999,7 +1999,7 @@ $chips-close-color: #c00 !default;
 .bcdInlineChart {
   > thead > tr > th { text-align: center; }
   td { text-align: left; } /* chart flyover */
-  td.bcdChartCell { padding: 0; margin: 0; height: 6em; }
+  td.bcdChartCell { padding: 0; margin: 0; height: 6em; z-index: 1; }
   td.bcdLegend { height: 8em; }
 }
 
